--- a/src/app/generate/result.component.html
+++ b/src/app/generate/result.component.html
@@ -1,9 +1,8 @@
-
 <div class="card">
     <h4 class="card-header">
-        Result
+        Result visualization, refId : {{refId}}.
     </h4>
-    <div class="card-body" style="height: 70vh;">
+    <div class="card-body col-md-10 offset-md-1 mt-5">
         <div class="embed-responsive embed-responsive-16by9">
             <iframe class="e2e-iframe-trusted-src" [src]="tryDoctype"></iframe>
         </div>
