--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,51 +1,162 @@
-<div class="col-md-6 offset-md-3 mt-5">
-    <div class="container mb-5">
-        <h1>Hi {{user.firstName}}!</h1>
-        <p>You're logged in with {{user.role}} role</p>
+<div class="container-fluid">
+    <div class="col-md-6 offset-md-4 mb-4 mt-5">
+        <div class="row">
+            <img class="mr-3" src="../../assets/image/logo_transparent.png" style="width: 100px; height: 100px;">
+            <div>
+                <h1>Hi, {{user.firstName}}!</h1>
+                <h3>Welcome to Visualization Platform.</h3>
+            </div>
+        </div>  
+    </div>
 
-        <div class="card" *ngIf="role == 'user' ||  role == 'designer'">
-            <h4 class="card-header">Your Visualization</h4>
-            <div class="card-body">
-                <div class="text-right"><p>You have created : {{count}}/20 Visualizations</p></div>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th style="width: 30%">Refid</th>
-                            <th style="width: 30%">Template</th>
-                            <th style="width: 30%">Status</th>
-                            <th style="width: 10%"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let item of items">
-                            <td>{{item.refId}}</td>
-                            <td>{{item.template}}</td>
-                            <td>{{item.status}}</td>
-                            <td style="white-space: nowrap">
-                                <a routerLink="/generate/result/{{item.refId}}" class="btn btn-sm btn-success mr-1">View</a>
-                                <div ngbDropdown class="d-inline-block">
-                                    <button class="btn btn-sm btn-outline-primary" id="dropdownMenu1" ngbDropdownToggle>Manage</button>
+    <div class="row p-4">
+        <div class="col-md-8 mb-4">
+            <div *ngIf="count > 0" class="card mb-5">
+                <h4 class="card-header">Recently Generated Visualizations</h4>
+                <div class="card-body">
+                    <div *ngIf="items">
+                        <div class="row d-flex justify-content-start ">
+                            <div *ngFor="let item of (items | slice: -3).reverse();">
+                                <a *ngIf="item.status=='active'" routerLink="/generate/result/{{item.refId}}"
+                                    style="color: inherit;text-decoration: none;">
+                                    <div class="card m-3" style="width: 18rem;">
+                                        <img class="card-img-top" src="{{apiUrl}}/{{item.template}}.png"
+                                            alt="Card image cap">
+                                        <div class="card-body mt-auto">
+                                            <div class="card-text">
+                                                <h6>{{item.template}}</h6>
+                                                <div class="row pl-3 pr-3">
+                                                    <p>
+                                                        RefId : {{item.refId}}
+                                                    </p>
+                                                    <p class="ml-auto text-success">{{item.status}}</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                                <div *ngIf="item.status=='inactive'" class="card m-3 d-flex justify-content-start "
+                                    style="width: 18rem;background-color: rgba(245, 245, 245, 1);opacity: .5;">
+                                    <img class="card-img-top" src="{{apiUrl}}/{{item.template}}.png"
+                                        alt="Card image cap">
+                                    <div class="card-body mt-auto">
+                                        <div class="card-text">
+                                            <h6>{{item.template}}</h6>
+                                            <div class="row pl-3 pr-3">
+                                                <p>
+                                                    RefId : {{item.refId}}
+                                                </p>
+                                                <p class="ml-auto text-warning">{{item.status}}</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" *ngIf="role == 'user' ||  role == 'designer'">
+                <h4 class="card-header">Our available visualization templates</h4>
+                <div class="card-body">
+                    <owl-carousel-o [options]="customOptions">
+                        <ng-container *ngFor="let template of templates">
+                            <ng-template carouselSlide>
+                                <img class="card-img-top" src="{{apiUrl}}/{{template.TemplateName}}.png"
+                                    alt="card image">
+                                <a routerLink="/generate">
+                                    <div class="text-center">
+                                        <p>{{template.TemplateName}}</p>
+                                    </div>
+                                </a>
+                            </ng-template>
+                        </ng-container>
+                    </owl-carousel-o>
+                </div>
+            </div>
+
+
+        </div>
+        <div class="col-md-4 mb-5">
+            <div class="card mb-4" *ngIf="role == 'user' ||  role == 'designer'">
+                <h4 class="card-header">Manage your visualizations</h4>
+                <div class="card-body">
+                    <div *ngIf="count > 0" class="row mb-3">
+                        <a routerLink="/generate" class="btn btn-success btn-success mb-2 ml-3">+ Generate New
+                            Visualization</a>  
+                        <div class="ml-auto mr-3 mt-2">
+                            <p>You have active : {{count}}/20 Visualizations</p>
+                        </div>
+                    </div>
+
+                    <div *ngIf="templates && count > 0">
+                    <table class="table table-striped">
+                        <thead >
+                            <tr>
+                                <th style="width: 30%">Refid</th>
+                                <th style="width: 30%">Template</th>
+                                <th style="width: 30%">Status</th>
+                                <th style="width: 10%"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let item of items">
+                                <td>{{item.refId}}</td>
+                                <td>{{item.template}}</td>
+                                <td>{{item.status}}</td>
+                                <td style="white-space: nowrap">
+                                    <a routerLink="/generate/result/{{item.refId}}" class="btn btn-sm btn-primary mr-1"
+                                        *ngIf="item.status=='active'">View</a>
+                                    <a class="btn btn-sm btn-secondary disabled mr-1"
+                                        *ngIf="item.status=='inactive'">View</a>
+                                    <div ngbDropdown class="d-inline-block">
+                                        <button class="btn btn-sm btn-outline-primary" id="dropdownMenu1"
+                                            ngbDropdownToggle>Manage</button>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenu1" ngbDropdownMenu>
-                                            <a routerLink="/generate/edit/{{item.refId}}"><button class="dropdown-item">Edit</button></a>
-                                            <button class="dropdown-item" (click)="delete(item.id,item.refId)" [disabled]="item.isDeleting">
-                                                <span *ngIf="item.isDeleting" class="spinner-border spinner-border-sm"></span>
+                                            <a routerLink="/generate/edit/{{item.refId}}"><button class="dropdown-item"
+                                                    [disabled]="item.status=='inactive'">Edit</button></a>
+                                            <button class="dropdown-item" (click)="delete(item.id,item.refId)"
+                                                [disabled]="item.isDeleting">
+                                                <span *ngIf="item.isDeleting"
+                                                    class="spinner-border spinner-border-sm"></span>
                                                 <span *ngIf="!item.isDeleting">Delete</span>
                                             </button>
-                                            <button class="dropdown-item">Deactivate</button>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Copy ppt url</a>
+                                            <button class="dropdown-item"
+                                                (click)="updateActivate(item.refId,item.status)">{{item.status=='active'
+                                                ?
+                                                'Deactive' : 'Active'}}</button>
                                         </div>
-                                </div>      
-                            </td>
-                        </tr>
-                        <tr *ngIf="!items">
-                            <td colspan="4" class="text-center">
-                                <span class="spinner-border spinner-border-lg align-center"></span>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr *ngIf="!items">
+                                <td colspan="4" class="text-center">
+                                    <span class="spinner-border spinner-border-lg align-center"></span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="text-center mt-5 mb-5" *ngIf="count == 0">
+                    <h5 class="mb-5">You have not generated any Visualization yet.</h5>
+                    <div class="row d-flex justify-content-center">
+                        <button class="btn btn-lg btn-success btn-block ml-5 mr-5 mb-3" routerLink="/tutorial">Read the guide</button>
+                        <button class="btn btn-lg btn-outline-dark btn-block ml-5 mr-5" routerLink="/generate">Generate</button>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="card" *ngIf="role == 'user' ||  role == 'designer'">
+                <h4 class="card-header">API references</h4>
+                <div class="card-body text-center">
+                    <p>Our platform can be access via. API <br>
+                        Learn more about our <a routerLink="/api">API documentation</a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
+
 </div>
