--- a/src/app/generate/layout.component.html
+++ b/src/app/generate/layout.component.html
@@ -1,5 +1,5 @@
-<div class="col-md-6 offset-md-3 mt-5">
-    <div class="container">
+<div class="col-md-12 mt-5">
+    <div class="container-fluid mb-4">
         <router-outlet></router-outlet>
     </div>
 </div>
