update home page
- pre finish homepage

--- a/src/app/generate/result.component.html
+++ b/src/app/generate/result.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <h4 class="card-header">
-        Result visualization, refId : {{refId}}.
+        Your result <small class="text-muted">refId : {{refId}}</small>
     </h4>
     <div class="card-body col-md-10 offset-md-1 mt-5">
         <div class="embed-responsive embed-responsive-16by9">
