--- a/src/app/generate/generate.component.html
+++ b/src/app/generate/generate.component.html
@@ -126,9 +126,9 @@
             <mat-step>
                 <ng-template matStepLabel><h5>Summary</h5></ng-template>
                 <div class="col-md-4 offset-md-4 text-center">
-                    <img class="card-img-top" src="{{apiUrl}}/{{firstFormGroup.get('vname').value}}.png" alt="template img">
+                    <img class="card-img-top mt-5" src="{{apiUrl}}/{{firstFormGroup.get('vname').value}}.png" alt="template img">
                     <div>
-                        <p><u>Please confirm your settings for the visualization before generate.</u></p>
+                        <p class="row mt-5">Please confirm your settings for the visualization before generate.</p>
                         <div class="row">
                             <p>Template    : <strong>   {{firstFormGroup.get("vname").value}}</strong></p>
                         </div>
@@ -141,7 +141,7 @@
                     </div>
                 <div>
                     <button mat-button matStepperPrevious>Back</button>
-                    <button *ngIf="!isEditMode" class="btn btn-lg btn-success" (click)="onSubmit()">Generate</button>
+                    <button *ngIf="!isEditMode" class="btn btn-lg btn-success ml-3" (click)="onSubmit()">Generate</button>
                     <button *ngIf="isEditMode" class="btn btn-success" (click)="onSubmit()">Edit</button>
                 </div>
                 </div>
